[gd_scene load_steps=4 format=2]

[ext_resource path="res://Cell.gd" type="Script" id=1]
[ext_resource path="res://Row.gd" type="Script" id=2]
[ext_resource path="res://Tile.gd" type="Script" id=3]

[node name="SubCell" type="Spatial"]
script = ExtResource( 1 )

[node name="Row1" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -35 )
script = ExtResource( 2 )

[node name="Tile1" type="Spatial" parent="Row1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 0, 0 )
script = ExtResource( 3 )

[node name="Tile2" type="Spatial" parent="Row1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 0, 0 )
script = ExtResource( 3 )

[node name="Tile3" type="Spatial" parent="Row1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 0 )
script = ExtResource( 3 )

[node name="Tile4" type="Spatial" parent="Row1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0 )
script = ExtResource( 3 )

[node name="Tile5" type="Spatial" parent="Row1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0 )
script = ExtResource( 3 )

[node name="Tile6" type="Spatial" parent="Row1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0 )
script = ExtResource( 3 )

[node name="Tile7" type="Spatial" parent="Row1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, 0 )
script = ExtResource( 3 )

[node name="Tile8" type="Spatial" parent="Row1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 0, 0 )
script = ExtResource( 3 )

[node name="Row2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -25 )
script = ExtResource( 2 )

[node name="Tile1" type="Spatial" parent="Row2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 0, 0 )
script = ExtResource( 3 )

[node name="Tile2" type="Spatial" parent="Row2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 0, 0 )
script = ExtResource( 3 )

[node name="Tile3" type="Spatial" parent="Row2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 0 )
script = ExtResource( 3 )

[node name="Tile4" type="Spatial" parent="Row2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0 )
script = ExtResource( 3 )

[node name="Tile5" type="Spatial" parent="Row2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0 )
script = ExtResource( 3 )

[node name="Tile6" type="Spatial" parent="Row2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0 )
script = ExtResource( 3 )

[node name="Tile7" type="Spatial" parent="Row2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, 0 )
script = ExtResource( 3 )

[node name="Tile8" type="Spatial" parent="Row2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 0, 0 )
script = ExtResource( 3 )

[node name="Row3" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15 )
script = ExtResource( 2 )

[node name="Tile1" type="Spatial" parent="Row3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 0, 0 )
script = ExtResource( 3 )

[node name="Tile2" type="Spatial" parent="Row3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 0, 0 )
script = ExtResource( 3 )

[node name="Tile3" type="Spatial" parent="Row3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 0 )
script = ExtResource( 3 )

[node name="Tile4" type="Spatial" parent="Row3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0 )
script = ExtResource( 3 )

[node name="Tile5" type="Spatial" parent="Row3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0 )
script = ExtResource( 3 )

[node name="Tile6" type="Spatial" parent="Row3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0 )
script = ExtResource( 3 )

[node name="Tile7" type="Spatial" parent="Row3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, 0 )
script = ExtResource( 3 )

[node name="Tile8" type="Spatial" parent="Row3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 0, 0 )
script = ExtResource( 3 )

[node name="Row4" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5 )
script = ExtResource( 2 )

[node name="Tile1" type="Spatial" parent="Row4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 0, 0 )
script = ExtResource( 3 )

[node name="Tile2" type="Spatial" parent="Row4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 0, 0 )
script = ExtResource( 3 )

[node name="Tile3" type="Spatial" parent="Row4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 0 )
script = ExtResource( 3 )

[node name="Tile4" type="Spatial" parent="Row4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0 )
script = ExtResource( 3 )

[node name="Tile5" type="Spatial" parent="Row4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0 )
script = ExtResource( 3 )

[node name="Tile6" type="Spatial" parent="Row4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0 )
script = ExtResource( 3 )

[node name="Tile7" type="Spatial" parent="Row4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, 0 )
script = ExtResource( 3 )

[node name="Tile8" type="Spatial" parent="Row4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 0, 0 )
script = ExtResource( 3 )

[node name="Row5" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )
script = ExtResource( 2 )

[node name="Tile1" type="Spatial" parent="Row5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 0, 0 )
script = ExtResource( 3 )

[node name="Tile2" type="Spatial" parent="Row5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 0, 0 )
script = ExtResource( 3 )

[node name="Tile3" type="Spatial" parent="Row5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 0 )
script = ExtResource( 3 )

[node name="Tile4" type="Spatial" parent="Row5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0 )
script = ExtResource( 3 )

[node name="Tile5" type="Spatial" parent="Row5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0 )
script = ExtResource( 3 )

[node name="Tile6" type="Spatial" parent="Row5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0 )
script = ExtResource( 3 )

[node name="Tile7" type="Spatial" parent="Row5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, 0 )
script = ExtResource( 3 )

[node name="Tile8" type="Spatial" parent="Row5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 0, 0 )
script = ExtResource( 3 )

[node name="Row6" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15 )
script = ExtResource( 2 )

[node name="Tile1" type="Spatial" parent="Row6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 0, 0 )
script = ExtResource( 3 )

[node name="Tile2" type="Spatial" parent="Row6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 0, 0 )
script = ExtResource( 3 )

[node name="Tile3" type="Spatial" parent="Row6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 0 )
script = ExtResource( 3 )

[node name="Tile4" type="Spatial" parent="Row6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0 )
script = ExtResource( 3 )

[node name="Tile5" type="Spatial" parent="Row6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0 )
script = ExtResource( 3 )

[node name="Tile6" type="Spatial" parent="Row6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0 )
script = ExtResource( 3 )

[node name="Tile7" type="Spatial" parent="Row6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, 0 )
script = ExtResource( 3 )

[node name="Tile8" type="Spatial" parent="Row6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 0, 0 )
script = ExtResource( 3 )

[node name="Row7" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 25 )
script = ExtResource( 2 )

[node name="Tile1" type="Spatial" parent="Row7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 0, 0 )
script = ExtResource( 3 )

[node name="Tile2" type="Spatial" parent="Row7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 0, 0 )
script = ExtResource( 3 )

[node name="Tile3" type="Spatial" parent="Row7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 0 )
script = ExtResource( 3 )

[node name="Tile4" type="Spatial" parent="Row7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0 )
script = ExtResource( 3 )

[node name="Tile5" type="Spatial" parent="Row7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0 )
script = ExtResource( 3 )

[node name="Tile6" type="Spatial" parent="Row7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0 )
script = ExtResource( 3 )

[node name="Tile7" type="Spatial" parent="Row7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, 0 )
script = ExtResource( 3 )

[node name="Tile8" type="Spatial" parent="Row7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 0, 0 )
script = ExtResource( 3 )

[node name="Row8" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 35 )
script = ExtResource( 2 )

[node name="Tile1" type="Spatial" parent="Row8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 0, 0 )
script = ExtResource( 3 )

[node name="Tile2" type="Spatial" parent="Row8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 0, 0 )
script = ExtResource( 3 )

[node name="Tile3" type="Spatial" parent="Row8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 0 )
script = ExtResource( 3 )

[node name="Tile4" type="Spatial" parent="Row8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0 )
script = ExtResource( 3 )

[node name="Tile5" type="Spatial" parent="Row8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0 )
script = ExtResource( 3 )

[node name="Tile6" type="Spatial" parent="Row8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0 )
script = ExtResource( 3 )

[node name="Tile7" type="Spatial" parent="Row8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, 0 )
script = ExtResource( 3 )

[node name="Tile8" type="Spatial" parent="Row8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 0, 0 )
script = ExtResource( 3 )
